# schematize

./: .gitignore  404.html  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml
api/evaluator/: index.html
api/retrieval/: index.html
api/schema/: index.html
api/schema_generator/: index.html
api/state/: index.html
baselines/: README.md  baseline_schematiq.sh  eval_schematiq.sh  run_schematiq_baseline.py  run_schematiq_eval.sh  setup_schematiq.sh  upload_baseline_results.py
config/: ablation.yaml  evaluate.yaml  evaluate_agreement.yaml  run_mocked.yaml
config/case/: en_age.yaml  en_contracts.yaml  en_personal_rights.yaml  pl_age.yaml  pl_contracts.yaml  pl_medical_errors.yaml  pl_mobbing.yaml  pl_personal_rights.yaml
config/retriever/: huggingface.yaml  mmlw.yaml  weaviate.yaml
configuration/: index.html
data/cases/: pl_personal_rights.yaml
docs/: configuration.md  faq.md  index.md  installation.md  pipeline.md  prompts.md  quickstart.md
docs/api/: evaluator.md  retrieval.md  schema.md  schema_generator.md  state.md
docs/examples/: age.md  index.md  medical_errors.md  personal_rights.md
docs/guides/: cli.md  custom-retriever.md  evaluation.md  huggingface.md  weaviate.md
docs/stylesheets/: extra.css
examples/: index.html
examples/age/: index.html
examples/medical_errors/: index.html
examples/personal_rights/: index.html
faq/: index.html
guides/cli/: index.html
guides/custom-retriever/: index.html
guides/evaluation/: index.html
guides/huggingface/: index.html
guides/weaviate/: index.html
installation/: index.html
notebooks/: ablation_analysis.ipynb  eval.ipynb  expert_agreement_analysis.ipynb  search_params_analysis.ipynb  single_run_analysis.ipynb
pipeline/: index.html
prompts/: index.html
quickstart/: index.html
scripts/: baseline.py  evaluate_annotator_agreement.py  evaluate_schema.py  huggingface_retriever.py  schema_generator.py  schema_generator_ablation.py  schema_generator_mocked.py
scripts/experiments/: ablation.sh  annotator_agreement.sh  baseline.sh  baseline_no_pd.sh  eval_ablation.sh  eval_baseline.sh  eval_baseline_no_pd.sh  eval_multirun.sh  eval_single_run.sh  final_run.sh  search_params.sh
scripts/schematiq/: baseline_schematiq.sh  (+3 more)
search/: search_index.json
tests/: conftest.py  test_error_handling.py  test_logging.py  test_public_api.py  test_schema_generator.py  test_scripts.py
(+109 files in other folders)
