[project]
name = "schematize"
version = "0.1.0"
description = "Agentic system for automated extraction-schema generation from natural language descriptions"
readme = "README.md"
license = { text = "CC-BY-SA-4.0" }
authors = [{ name = "Albert Sawczyn", email = "albert.sawczyn@pwr.edu.pl" }]
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-openai>=0.3",
    "langchain-community>=0.3",
    "langchain-text-splitters>=0.3",
    "langgraph>=0.6",
    "typing-extensions>=4.0",
    "typer>=0.26.7",
    "loguru>=0.7",
]

[project.optional-dependencies]
weaviate = [
    "weaviate-client>=4.11",
]
huggingface = [
    "datasets>=3.0",
    "sentence-transformers>=3.0",
    "faiss-cpu>=1.8",
]
scripts = [
    "hydra-core>=1.3",
    "hydra-joblib-launcher>=1.2",
    "tqdm>=4.0",
]
notebooks = [
    "pandas>=2.0",
    "matplotlib>=3.0",
    "jupyter>=1.0",
    "ipykernel>=6.0",
]
dev = [
    "pytest>=8.0",
    "coverage>=7.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "pre-commit>=4.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[project.scripts]
schematize-run = "schematize._scripts.schema_generator:app"
schematize-run-mocked = "schematize._scripts.schema_generator_mocked:main"
schematize-evaluate = "schematize._scripts.evaluate_schema:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/schematize"]

[tool.hatch.build.targets.wheel.shared-data]

[tool.hatch.build]
include = [
    "src/schematize/**/*.py",
    "src/schematize/**/*.yaml",
    "src/schematize/py.typed",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "coverage>=7.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "pre-commit>=4.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.mypy]
python_version = "3.12"

[[tool.mypy.overrides]]
module = ["weaviate.*", "hydra.*", "omegaconf.*", "langchain.*", "langgraph.*", "langchain_core.*", "langchain_openai.*", "langchain_community.*", "datasets.*", "sentence_transformers.*", "faiss.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0.0"
pythonpath = ["src"]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
